--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@ header {
   margin: 0 auto;
   padding: 20px 0px 0px 0px;
   color: #222222;
+  background-color: lightblue;
 }
 
 .content-container {
